# cloud-hypervisor

./: .gitignore  Cargo.toml  kvm-bindings_arm64_nv.patch  patch
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: fdt.rs  mod.rs
arch/src/x86_64/: mod.rs
block/src/: lib.rs
devices/: Cargo.toml
devices/src/: gic.rs  ioapic.rs  lib.rs  pvpanic.rs
devices/src/legacy/: mod.rs  serial.rs  uart_pl011.rs
hypervisor/: Cargo.toml
hypervisor/src/: lib.rs  vm.rs
hypervisor/src/arch/x86/: mod.rs
hypervisor/src/kvm/: mod.rs
hypervisor/src/kvm/aarch64/gic/: mod.rs
hypervisor/src/kvm/x86_64/: mod.rs
net_util/: Cargo.toml
net_util/src/: queue_pair.rs
pci/: Cargo.toml
pci/src/: lib.rs
performance-metrics/: Cargo.toml
src/: main.rs
virtio-devices/: Cargo.toml
virtio-devices/src/: block.rs  console.rs  lib.rs  net.rs  rng.rs  thread_helper.rs
vm-device/: Cargo.toml
vm-device/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: acpi.rs  config.rs  cpu.rs  device_manager.rs  device_tree.rs  lib.rs  memory_manager.rs  migration.rs  serial_manager.rs  vm.rs  vm_config.rs
vmm/src/api/: mod.rs
vmm/src/api/http/: http_endpoint.rs  mod.rs
