[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arch = { path = "../arch" }
bitflags = "2.4.1"
byteorder = "1.4.3"
hypervisor = { path = "../hypervisor" }
libc = "0.2.153"
log = "0.4.21"
thiserror = "1.0.52"
versionize = "0.2.0"
versionize_derive = "0.1.6"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = "0.14.0"
vmm-sys-util = "0.12.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arch = { path = "../arch" }

[features]
default = []
