[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"

[features]
kvm = ["kvm-ioctls", "kvm-bindings"]

[dependencies]
anyhow = "1.0.79"
byteorder = "1.4.3"
libc = "0.2.153"
log = "0.4.21"
kvm-ioctls = { version = "0.16.0", optional = true }
kvm-bindings = { git = "https://github.com/cloud-hypervisor/kvm-bindings", branch = "ch-v0.7.0", features = ["with-serde", "fam-wrappers"], optional  = true }
serde = { version = "1.0.196", features = ["rc", "derive"] }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = { version = "0.12.1", features = ["with-serde"] }
thiserror = "1.0.52"

[target.'cfg(target_arch = "x86_64")'.dependencies.iced-x86]
optional = true
version = "1.20.0"
default-features = false
features = ["std", "decoder", "op_code_info", "instr_info", "fast_fmt"]

[dev-dependencies]
env_logger = "0.10.1"
