[package]
name = "vmm"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[features]
default = []
kvm = ["hypervisor/kvm", "vm-device/kvm"]

[dependencies]
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", branch = "main"  }
anyhow = "1.0.79"
arc-swap = "1.5.1"
arch = { path = "../arch" }
bitflags = "2.4.1"
clap = "4.4.7"
devices = { path = "../devices" }
epoll = "4.3.3"
futures = { version = "0.3.30", optional = true }
hypervisor = { path = "../hypervisor" }
libc = "0.2.153"
linux-loader = { version = "0.11.0", features = ["elf", "bzimage", "pe"] }
log = "0.4.20"
micro_http = { git = "https://github.com/firecracker-microvm/micro-http", branch = "main" }
once_cell = "1.19.0"
option_parser = { path = "../option_parser" }
range_map_vec = { version = "0.1.0", optional = true }
serde = { version = "1.0.196", features = ["rc", "derive"] }
serial_buffer = { path = "../serial_buffer" }
signal-hook = "0.3.17"
thiserror = "1.0.52"
uuid = "1.3.4"
versionize = "0.2.0"
versionize_derive = "0.1.6"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vm-migration = { path = "../vm-migration" }
vmm-sys-util = { version = "0.12.1", features = ["with-serde"] }
zerocopy = { version = "0.7.32", features = ["alloc","derive"] }
